# src/docs/swagger-output.json
@@ -26,7 +26,7 @@
     }
   ],
   "paths": {
-    "/register": {
+    "/user/register": {
       "post": {
         "description": "",
         "parameters": [],
@@ -60,7 +60,7 @@
         }
       }
     },
-    "/login": {
+    "/user/login": {
       "post": {
         "description": "",
         "parameters": [],
@@ -88,9 +88,12 @@
         }
       }
     },
-    "/": {
+    "/products": {
       "post": {
-        "description": "",
+        "tags": [
+          "POST Routes"
+        ],
+        "description": "Route that creates a new product",
         "parameters": [
           {
             "name": "auth-token",
@@ -113,10 +116,13 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
-      }
-    },
-    "/products": {
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      },
       "get": {
         "tags": [
           "GET Routes"
@@ -383,7 +389,7 @@
                 "properties": {
                   "type": {
                     "type": "string",
-                    "example": "string"
+                    "example": "number"
                   }
                 }
               },
